Fri Jul 28 07:42:50 2000  David L. Levine <levine@cs.wustl.edu>

        * tests/Makefile: build CDR_Array_Test, even on LynxOS.
          It builds and runs successfully on LynxOS 3.1.0.

Fri Jul 28 00:23:37 2000  John Heitmann  <jwh1@cs.wustl.edu>

        * ace/OS.h
          Slightly modified semaphore code for pace.

        * ace/OS.i
          Updated cond_timedwait in ACE_HAS_PACE to
          initialize name_ to null.

          Linux uses native gettimeofday.

        * docs/ACE-SSL.html
          Updated with new information about obtaining ACE+SSL.

Thu Jul 27 18:03:24 2000  Luther J Baker  <luther@cs.wustl.edu>

        * include/makeinclude/platform_linux_lxpthread.GNU:

          Updated to include the current correct platform_linux.GNU.

Thu Jul 27 18:17:36 2000  Steve Huston  <shuston@riverace.com>

        * ace/Future.h: Added some comments to ACE_Future_Rep<>::set and
          ACE_Future<>::set to say they only have an effect on the first
          call for that object. Thanks to Andres Kruse <Andres.Kruse@cern.ch>,
          Douglas C. Schmidt <schmidt@cs.wustl.edu>, and
          John Tucker <jtucker@infoglide.com> for their insight on the
          original intentions.

Thu Jul 27 08:32:58 2000  John Heitmann  <jwh1@cs.wustl.edu>

        * ace/OS.i
          Qualified two pace functions with the correct
          pace_ name. Added preliminary pace implementation
          for ACE_OS::gettimeofday. See PACE/ChangeLog for
          other changes relevant to ACE_OS compiled with pace.

Wed Jul 26 18:08:11 2000  Andrew G. Gilpin  <agg1@cs.wustl.edu>

        * ace/Log_Record.cpp
        * ace/ACE.cpp
        * ace/Handle_Set.cpp
        * ace/Capabilities.{cpp, h}
          Cosmetic changes required for split-cpp.

Wed Jul 26 13:20:00 2000  Kirthika  Parameswaran  <kirthika@cs.wustl.edu>

        * ace/Cached_Connect_Strategy_T.h
        (ACE_Bounded_Cached_Connect_Strategy): Added a typedef member