@@ -21,7 +21,8 @@ DIRS    = ace \
           apps \
           examples \
           performance-tests \
-          websvcs
+          websvcs \
+          PACE
 
 CLONE   = Makefile \
           ace \
@@ -34,7 +35,8 @@ CLONE   = Makefile \
           performance-tests \
           TAO \
           tests \
-          websvcs
+          websvcs \
+          PACE
 
 #----------------------------------------------------------------------------
 #       Include macros and targets
@@ -127,6 +129,7 @@ CONTROLLED_FILES = \
         Makefile.am \
         Makefile.in \
         NEWS \
+        PACE \
         PROBLEM-REPORT-FORM \
         README \
         THANKS \
@@ -174,6 +177,7 @@ ALL_RELEASE_FILES = \
 
 RELEASE_LIB_FILES = \
         ACE_wrappers/VERSION \
+        ACE_wrappers/PACE \
         ACE_wrappers/ace \
         ACE_wrappers/bin \
         ACE_wrappers/etc \
@@ -187,9 +191,9 @@ RELEASE_LIB_FILES = \
 # of the release file lists since they may already be in a directory
 # found in those lists.
 RELEASE_TAG_FILES = \
-	man/Makefile.am \
-	man/man3/Makefile.am \
-	man/html/Makefile.am
+        man/Makefile.am \
+        man/man3/Makefile.am \
+        man/html/Makefile.am
 
 .PHONY: release releasetao releaseall tag
 
